# EuclidEmulator

./: .gitignore  CMakeLists.txt  EucRef_Class.ini  EuclidEmulator.c  GetPnonlin.py  Makefile  README.md  README.txt  build  cosmo.c  cosmo.h  ee  example.sh  test_pconv.py
CLI/: CMakeLists.txt  EuclidEmulator.h  cmake_install.job  master.c
ClassPatch/: ClassPatch.README.txt
ClassPatch/ClassPatch-master/: Makefile
ClassPatch/ClassPatch-master/include/: common.h  output.h  parser.h  perturbations.h
ClassPatch/ClassPatch-master/output/: explanatory01_parameters.ini  explanatory01_unused_parameters
ClassPatch/ClassPatch-master/python/: classee.c  setup.py
ClassPatch/ClassPatch-master/source/: background.c
ClassPatch/ClassPatch-master/tools/: evolver_ndf15.c
GUI/: CosmoPanel.py  EEGui.Trial1.py  EEGui.design.py  EEGui.main.py  EEGui.py
Manual/: EuclidEmulator_Manual.aux  EuclidEmulator_Manual.out  EuclidEmulator_Manual.tex  EuclidEmulator_Manual.toc
TestFiles/: TestParFile.csv
e2py/: ee_aux.py  ee_background.py  ee_cosmoconv.py  ee_lens.py  ee_observables.py  pylintrc  test.py
example/: example.sh
examples/: AVG_EuclidReference.wRad.00100.pk  ProducePublicationPlot.py  example.sh  test.py
include/: EuclidEmulator.h  EuclidEmulator.h.in
libeuc/: CMakeLists.txt  EuclidEmulator.c  EuclidEmulator.h.in  cosmo.c  cosmo.h
src/: CMakeLists.txt  EuclidEmulator.c  EuclidEmulator_BackEnd.pyx  master.c
wrapper/: CMakeLists.txt  EuclidEmulator_BackEnd.pyx
wrapper/e2py/: __init__.py  _ee_lens.py  ee_aux.py  ee_background.py  ee_input.py  ee_lens.py  ee_observables.py
wrapper/e2py/_internal/: _ee_aux.py  _ee_background.py  _ee_cosmoconv.py
wrapper2/: CMakeLists.txt  EuclidEmulator_BackEnd.pyx
wrapper2/build_for_testing/: CMakeCache.txt  EuclidEmulator_BackEnd.c  install_manifest.txt
wrapper2/build_kmode/: Makefile  cmake_install.cmake
wrapper2/cmake_scripts/: FindCython.cmake
wrapper2/e2py/: __init__.py  _ee_lens.py  ee_input.py  ee_observables.py
wrapper2/e2py/_internal/: __init__.py  _ee_aux.py  _ee_background.py  _ee_cosmoconv.py
wrapper3/: CMakeLists.txt  EuclidEmulator_BackEnd.pyx
wrapper3/cmake_scripts/: FindCython.cmake
wrapper3/e2py/: __init__.py  _ee_lens.py  ee_input.py  ee_observables.py
wrapper3/e2py/_internal/: _ee_aux.py  _ee_background.py  _ee_cosmoconv.py
wrapper3/e2py3/: _ee_lens.py  ee_input.py  ee_observables.py
wrapper3/e2py3/_internal/: _ee_background.py
